--- a/Entrega/css/estilos.css
+++ b/Entrega/css/estilos.css
@@ -30,7 +30,7 @@ fieldset{
 legend{
     background-color: #4d6d63;
     color: #ffffff;
-    font-size: 15px;
+    font-size: 100%;
     padding: 10px;
     border-radius: 5px;
     text-align: left;
@@ -66,8 +66,9 @@ fieldset:focus-within{
 }
 
 hr{
-    background-color: #4d6d63;
-    border-radius: 20px;
+    margin: 50px 650px;
+    border: 0px;
+    border-bottom: 20px dotted #90afa9;
 }
 
 input[type="radio"]{
@@ -80,6 +81,7 @@ select{
 .contacto input::placeholder{
     text-align: right;
     color: #90afa9;
+    font-size: 150%;
 }
 
 .actividades{
@@ -102,18 +104,21 @@ select{
     margin-bottom: 20px ;
 }
 
+.botones{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 button{
-    font-size: 15px;
+    font-size: 100%;
     color: #90afa9;
     background-color: #2b3d37;
     border-radius: 5px;
     padding: 10px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin: 2px 20px 20px;
 }
-
 
 button:hover{
     cursor: pointer;
-    padding: 15px;
+    background-color: #1f2023;
 }
